# neme-bot-1

./: .env  .gitignore  Dockerfile  LICENSE  README.md  front.py  pyproject.toml  requirements.txt  uaoesp.code-workspace
components/: faq.py  sidebar.py
experiments/: Testing__llama2_azure_jorge.ipynb
