[tool.poetry]
name = "nemebot"
version = "0.1.0"
description = "Testing llm"
authors = ["Jorge Jaramillo <jandresjn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
