[tool.poetry]
name = "nemebot"
version = "0.1.0"
description = "Testing llm"
authors = ["Jorge Jaramillo <jandresjn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"
requests = "^2.31.0"
langchain = "^0.0.312"
python-dotenv = "^1.0.0"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
torch = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
